--- a/static/css/grid.css
+++ b/static/css/grid.css
@@ -1,21 +1,32 @@
 /*
-	Variable Grid System.
-	Learn more ~ http://www.spry-soft.com/grids/
-	Based on 960 Grid System - http://960.gs/
+  960 Grid System ~ Core CSS.
+  Learn more ~ http://960.gs/
 
-	Licensed under GPL and MIT.
+  Licensed under GPL and MIT.
 */
 
+/*
+  Forces backgrounds to span full width,
+  even if there is horizontal scrolling.
+  Increase this if your layout is wider.
 
-/* Containers
-----------------------------------------------------------------------------------------------------*/
-.container_12 {
-	margin-left: auto;
-	margin-right: auto;
-	width: 1140px;
+  Note: IE6 works fine without this fix.
+*/
+
+body {
+  min-width: 960px;
 }
 
-/* Grid >> Global
+/* `Container
+----------------------------------------------------------------------------------------------------*/
+
+.container_24 {
+  margin-left: auto;
+  margin-right: auto;
+  width: 960px;
+}
+
+/* `Grid >> Global
 ----------------------------------------------------------------------------------------------------*/
 
 .grid_1,
@@ -29,312 +40,584 @@
 .grid_9,
 .grid_10,
 .grid_11,
-.grid_12 {
-	display:inline;
-	float: left;
-	position: relative;
-	margin-left: 10px;
-	margin-right: 10px;
+.grid_12,
+.grid_13,
+.grid_14,
+.grid_15,
+.grid_16,
+.grid_17,
+.grid_18,
+.grid_19,
+.grid_20,
+.grid_21,
+.grid_22,
+.grid_23,
+.grid_24 {
+  display: inline;
+  float: left;
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
-/* Grid >> Children (Alpha ~ First, Omega ~ Last)
+.push_1, .pull_1,
+.push_2, .pull_2,
+.push_3, .pull_3,
+.push_4, .pull_4,
+.push_5, .pull_5,
+.push_6, .pull_6,
+.push_7, .pull_7,
+.push_8, .pull_8,
+.push_9, .pull_9,
+.push_10, .pull_10,
+.push_11, .pull_11,
+.push_12, .pull_12,
+.push_13, .pull_13,
+.push_14, .pull_14,
+.push_15, .pull_15,
+.push_16, .pull_16,
+.push_17, .pull_17,
+.push_18, .pull_18,
+.push_19, .pull_19,
+.push_20, .pull_20,
+.push_21, .pull_21,
+.push_22, .pull_22,
+.push_23, .pull_23 {
+  position: relative;
+}
+
+/* `Grid >> Children (Alpha ~ First, Omega ~ Last)
 ----------------------------------------------------------------------------------------------------*/
 
 .alpha {
-	margin-left: 0;
+  margin-left: 0;
 }
 
 .omega {
-	margin-right: 0;
+  margin-right: 0;
 }
 
-/* Grid >> 12 Columns
+/* `Grid >> 24 Columns
 ----------------------------------------------------------------------------------------------------*/
 
-.container_12 .grid_1 {
-	width:75px;
+.container_24 .grid_1 {
+  width: 30px;
 }
 
-.container_12 .grid_2 {
-	width:170px;
+.container_24 .grid_2 {
+  width: 70px;
 }
 
-.container_12 .grid_3 {
-	width:265px;
+.container_24 .grid_3 {
+  width: 110px;
 }
 
-.container_12 .grid_4 {
-	width:360px;
+.container_24 .grid_4 {
+  width: 150px;
 }
 
-.container_12 .grid_5 {
-	width:455px;
+.container_24 .grid_5 {
+  width: 190px;
 }
 
-.container_12 .grid_6 {
-	width:550px;
+.container_24 .grid_6 {
+  width: 230px;
 }
 
-.container_12 .grid_7 {
-	width:645px;
+.container_24 .grid_7 {
+  width: 270px;
 }
 
-.container_12 .grid_8 {
-	width:740px;
+.container_24 .grid_8 {
+  width: 310px;
 }
 
-.container_12 .grid_9 {
-	width:835px;
+.container_24 .grid_9 {
+  width: 350px;
 }
 
-.container_12 .grid_10 {
-	width:930px;
+.container_24 .grid_10 {
+  width: 390px;
 }
 
-.container_12 .grid_11 {
-	width:1025px;
+.container_24 .grid_11 {
+  width: 430px;
 }
 
-.container_12 .grid_12 {
-	width:1120px;
+.container_24 .grid_12 {
+  width: 470px;
 }
 
+.container_24 .grid_13 {
+  width: 510px;
+}
 
+.container_24 .grid_14 {
+  width: 550px;
+}
 
-/* Prefix Extra Space >> 12 Columns
+.container_24 .grid_15 {
+  width: 590px;
+}
+
+.container_24 .grid_16 {
+  width: 630px;
+}
+
+.container_24 .grid_17 {
+  width: 670px;
+}
+
+.container_24 .grid_18 {
+  width: 710px;
+}
+
+.container_24 .grid_19 {
+  width: 750px;
+}
+
+.container_24 .grid_20 {
+  width: 790px;
+}
+
+.container_24 .grid_21 {
+  width: 830px;
+}
+
+.container_24 .grid_22 {
+  width: 870px;
+}
+
+.container_24 .grid_23 {
+  width: 910px;
+}
+
+.container_24 .grid_24 {
+  width: 950px;
+}
+
+/* `Prefix Extra Space >> 24 Columns
 ----------------------------------------------------------------------------------------------------*/
 
-.container_12 .prefix_1 {
-	padding-left:95px;
+.container_24 .prefix_1 {
+  padding-left: 40px;
 }
 
-.container_12 .prefix_2 {
-	padding-left:190px;
+.container_24 .prefix_2 {
+  padding-left: 80px;
 }
 
-.container_12 .prefix_3 {
-	padding-left:285px;
+.container_24 .prefix_3 {
+  padding-left: 120px;
 }
 
-.container_12 .prefix_4 {
-	padding-left:380px;
+.container_24 .prefix_4 {
+  padding-left: 160px;
 }
 
-.container_12 .prefix_5 {
-	padding-left:475px;
+.container_24 .prefix_5 {
+  padding-left: 200px;
 }
 
-.container_12 .prefix_6 {
-	padding-left:570px;
+.container_24 .prefix_6 {
+  padding-left: 240px;
 }
 
-.container_12 .prefix_7 {
-	padding-left:665px;
+.container_24 .prefix_7 {
+  padding-left: 280px;
 }
 
-.container_12 .prefix_8 {
-	padding-left:760px;
+.container_24 .prefix_8 {
+  padding-left: 320px;
 }
 
-.container_12 .prefix_9 {
-	padding-left:855px;
+.container_24 .prefix_9 {
+  padding-left: 360px;
 }
 
-.container_12 .prefix_10 {
-	padding-left:950px;
+.container_24 .prefix_10 {
+  padding-left: 400px;
 }
 
-.container_12 .prefix_11 {
-	padding-left:1045px;
+.container_24 .prefix_11 {
+  padding-left: 440px;
 }
 
+.container_24 .prefix_12 {
+  padding-left: 480px;
+}
 
+.container_24 .prefix_13 {
+  padding-left: 520px;
+}
 
-/* Suffix Extra Space >> 12 Columns
+.container_24 .prefix_14 {
+  padding-left: 560px;
+}
+
+.container_24 .prefix_15 {
+  padding-left: 600px;
+}
+
+.container_24 .prefix_16 {
+  padding-left: 640px;
+}
+
+.container_24 .prefix_17 {
+  padding-left: 680px;
+}
+
+.container_24 .prefix_18 {
+  padding-left: 720px;
+}
+
+.container_24 .prefix_19 {
+  padding-left: 760px;
+}
+
+.container_24 .prefix_20 {
+  padding-left: 800px;
+}
+
+.container_24 .prefix_21 {
+  padding-left: 840px;
+}
+
+.container_24 .prefix_22 {
+  padding-left: 880px;
+}
+
+.container_24 .prefix_23 {
+  padding-left: 920px;
+}
+
+/* `Suffix Extra Space >> 24 Columns
 ----------------------------------------------------------------------------------------------------*/
 
-.container_12 .suffix_1 {
-	padding-right:95px;
+.container_24 .suffix_1 {
+  padding-right: 40px;
 }
 
-.container_12 .suffix_2 {
-	padding-right:190px;
+.container_24 .suffix_2 {
+  padding-right: 80px;
 }
 
-.container_12 .suffix_3 {
-	padding-right:285px;
+.container_24 .suffix_3 {
+  padding-right: 120px;
 }
 
-.container_12 .suffix_4 {
-	padding-right:380px;
+.container_24 .suffix_4 {
+  padding-right: 160px;
 }
 
-.container_12 .suffix_5 {
-	padding-right:475px;
+.container_24 .suffix_5 {
+  padding-right: 200px;
 }
 
-.container_12 .suffix_6 {
-	padding-right:570px;
+.container_24 .suffix_6 {
+  padding-right: 240px;
 }
 
-.container_12 .suffix_7 {
-	padding-right:665px;
+.container_24 .suffix_7 {
+  padding-right: 280px;
 }
 
-.container_12 .suffix_8 {
-	padding-right:760px;
+.container_24 .suffix_8 {
+  padding-right: 320px;
 }
 
-.container_12 .suffix_9 {
-	padding-right:855px;
+.container_24 .suffix_9 {
+  padding-right: 360px;
 }
 
-.container_12 .suffix_10 {
-	padding-right:950px;
+.container_24 .suffix_10 {
+  padding-right: 400px;
 }
 
-.container_12 .suffix_11 {
-	padding-right:1045px;
+.container_24 .suffix_11 {
+  padding-right: 440px;
 }
 
+.container_24 .suffix_12 {
+  padding-right: 480px;
+}
 
+.container_24 .suffix_13 {
+  padding-right: 520px;
+}
 
-/* Push Space >> 12 Columns
+.container_24 .suffix_14 {
+  padding-right: 560px;
+}
+
+.container_24 .suffix_15 {
+  padding-right: 600px;
+}
+
+.container_24 .suffix_16 {
+  padding-right: 640px;
+}
+
+.container_24 .suffix_17 {
+  padding-right: 680px;
+}
+
+.container_24 .suffix_18 {
+  padding-right: 720px;
+}
+
+.container_24 .suffix_19 {
+  padding-right: 760px;
+}
+
+.container_24 .suffix_20 {
+  padding-right: 800px;
+}
+
+.container_24 .suffix_21 {
+  padding-right: 840px;
+}
+
+.container_24 .suffix_22 {
+  padding-right: 880px;
+}
+
+.container_24 .suffix_23 {
+  padding-right: 920px;
+}
+
+/* `Push Space >> 24 Columns
 ----------------------------------------------------------------------------------------------------*/
 
-.container_12 .push_1 {
-	left:95px;
+.container_24 .push_1 {
+  left: 40px;
 }
 
-.container_12 .push_2 {
-	left:190px;
+.container_24 .push_2 {
+  left: 80px;
 }
 
-.container_12 .push_3 {
-	left:285px;
+.container_24 .push_3 {
+  left: 120px;
 }
 
-.container_12 .push_4 {
-	left:380px;
+.container_24 .push_4 {
+  left: 160px;
 }
 
-.container_12 .push_5 {
-	left:475px;
+.container_24 .push_5 {
+  left: 200px;
 }
 
-.container_12 .push_6 {
-	left:570px;
+.container_24 .push_6 {
+  left: 240px;
 }
 
-.container_12 .push_7 {
-	left:665px;
+.container_24 .push_7 {
+  left: 280px;
 }
 
-.container_12 .push_8 {
-	left:760px;
+.container_24 .push_8 {
+  left: 320px;
 }
 
-.container_12 .push_9 {
-	left:855px;
+.container_24 .push_9 {
+  left: 360px;
 }
 
-.container_12 .push_10 {
-	left:950px;
+.container_24 .push_10 {
+  left: 400px;
 }
 
-.container_12 .push_11 {
-	left:1045px;
+.container_24 .push_11 {
+  left: 440px;
 }
 
+.container_24 .push_12 {
+  left: 480px;
+}
 
+.container_24 .push_13 {
+  left: 520px;
+}
 
-/* Pull Space >> 12 Columns
+.container_24 .push_14 {
+  left: 560px;
+}
+
+.container_24 .push_15 {
+  left: 600px;
+}
+
+.container_24 .push_16 {
+  left: 640px;
+}
+
+.container_24 .push_17 {
+  left: 680px;
+}
+
+.container_24 .push_18 {
+  left: 720px;
+}
+
+.container_24 .push_19 {
+  left: 760px;
+}
+
+.container_24 .push_20 {
+  left: 800px;
+}
+
+.container_24 .push_21 {
+  left: 840px;
+}
+
+.container_24 .push_22 {
+  left: 880px;
+}
+
+.container_24 .push_23 {
+  left: 920px;
+}
+
+/* `Pull Space >> 24 Columns
 ----------------------------------------------------------------------------------------------------*/
 
-.container_12 .pull_1 {
-	left:-95px;
+.container_24 .pull_1 {
+  left: -40px;
 }
 
-.container_12 .pull_2 {
-	left:-190px;
+.container_24 .pull_2 {
+  left: -80px;
 }
 
-.container_12 .pull_3 {
-	left:-285px;
+.container_24 .pull_3 {
+  left: -120px;
 }
 
-.container_12 .pull_4 {
-	left:-380px;
+.container_24 .pull_4 {
+  left: -160px;
 }
 
-.container_12 .pull_5 {
-	left:-475px;
+.container_24 .pull_5 {
+  left: -200px;
 }
 
-.container_12 .pull_6 {
-	left:-570px;
+.container_24 .pull_6 {
+  left: -240px;
 }
 
-.container_12 .pull_7 {
-	left:-665px;
+.container_24 .pull_7 {
+  left: -280px;
 }
 
-.container_12 .pull_8 {
-	left:-760px;
+.container_24 .pull_8 {
+  left: -320px;
 }
 
-.container_12 .pull_9 {
-	left:-855px;
+.container_24 .pull_9 {
+  left: -360px;
 }
 
-.container_12 .pull_10 {
-	left:-950px;
+.container_24 .pull_10 {
+  left: -400px;
 }
 
-.container_12 .pull_11 {
-	left:-1045px;
+.container_24 .pull_11 {
+  left: -440px;
 }
 
+.container_24 .pull_12 {
+  left: -480px;
+}
 
+.container_24 .pull_13 {
+  left: -520px;
+}
 
+.container_24 .pull_14 {
+  left: -560px;
+}
 
-/* Clear Floated Elements
+.container_24 .pull_15 {
+  left: -600px;
+}
+
+.container_24 .pull_16 {
+  left: -640px;
+}
+
+.container_24 .pull_17 {
+  left: -680px;
+}
+
+.container_24 .pull_18 {
+  left: -720px;
+}
+
+.container_24 .pull_19 {
+  left: -760px;
+}
+
+.container_24 .pull_20 {
+  left: -800px;
+}
+
+.container_24 .pull_21 {
+  left: -840px;
+}
+
+.container_24 .pull_22 {
+  left: -880px;
+}
+
+.container_24 .pull_23 {
+  left: -920px;
+}
+
+/* `Clear Floated Elements
 ----------------------------------------------------------------------------------------------------*/
 
 /* http://sonspring.com/journal/clearing-floats */
 
 .clear {
-	clear: both;
-	display: block;
-	overflow: hidden;
-	visibility: hidden;
-	width: 0;
-	height: 0;
+  clear: both;
+  display: block;
+  overflow: hidden;
+  visibility: hidden;
+  width: 0;
+  height: 0;
 }
 
-/* http://perishablepress.com/press/2008/02/05/lessons-learned-concerning-the-clearfix-css-hack */
+/* http://www.yuiblog.com/blog/2010/09/27/clearfix-reloaded-overflowhidden-demystified */
 
-.clearfix:after {
-	clear: both;
-	content: ' ';
-	display: block;
-	font-size: 0;
-	line-height: 0;
-	visibility: hidden;
-	width: 0;
-	height: 0;
+.clearfix:before,
+.clearfix:after,
+.container_24:before,
+.container_24:after {
+  content: '.';
+  display: block;
+  overflow: hidden;
+  visibility: hidden;
+  font-size: 0;
+  line-height: 0;
+  width: 0;
+  height: 0;
 }
 
-.clearfix {
-	display: inline-block;
+.clearfix:after,
+.container_24:after {
+  clear: both;
 }
 
-* html .clearfix {
-	height: 1%;
-}
+/*
+  The following zoom:1 rule is specifically for IE6 + IE7.
+  Move to separate stylesheet if invalid CSS is a problem.
+*/
 
-.clearfix {
-	display: block;
+.clearfix,
+.container_24 {
+  zoom: 1;
 }
 
 /* Padded
