--- a/templates/index/index.html
+++ b/templates/index/index.html
@@ -13,7 +13,7 @@
 <p><a href='#'>Manage a trip</a></p>
 <p><a href='/trips/create/'>Create a new trip</a></p>
 {% else %}
-<form id="where_form" class="grid_24" action="/trip/create/" method="post">
+<form id="where_form" class="grid_24" action="/" method="POST">
 	<h1 class='prefix_4 grid_16 alpha'>
 		AccompanyMe wants to make planning trips with friends and family easy.
 	</h1>
