--- a/templates/trips/alt_create.html
+++ b/templates/trips/alt_create.html
@@ -6,57 +6,23 @@
 
 {% block extra_js %}
 <script type='text/javascript' src='/static/js/flickr.js'></script>
+<script type='text/javascript' src='/static/js/fb.js'></script>
 <script src="//connect.facebook.net/en_US/all.js"></script>
 <script type='text/javascript'>
-	$(function(){
-		//Facebook stuff
-		FB.init({
-			appId  : '142506149154206',
-			status : true, // check login status
-			cookie : true, // enable cookies to allow the server to access the session
-			xfbml  : true,  // parse XFBML
-			oauth : true //enables OAuth 2.0
-		});
-
-		//Other stuff
-		getFlickr('{{ where }}', 5);
-		fbLogin();
+$(function(){
+	//Init FB
+	FB.init({
+		appId  : '142506149154206',
+		status : true, // check login status
+		cookie : true, // enable cookies to allow the server to access the session
+		xfbml  : true,  // parse XFBML
+		oauth : true //enables OAuth 2.0
 	});
 
-	function fbLogin() {
-		FB.getLoginStatus(function(response) {
-			if (response.authResponse) {
-				// show friends
-				console.log("Already a member here");
-				FB.api('/me', function(response) {
-					getFBFriends();		
-				});
-			} else {
-				// show connect button
-				$('#fb-photo-holder').append("<a id='fb-button' href='#'><image src='/static/images/facebook-connect.png'/></a>");
-				$('#fb-button').click(function() {
-					FB.login(function(response) {
-						getFBFriends();
-					}, {scope: 'email, publish_stream'});
-				}); 
-			}
-		});
-
-	function getFBFriends() {
-		if ($('#fb-button')) {
-			$('#fb-button').remove();
-		}
-		FB.api('/me/friends', function(response) {
-			for(i=0; i<=23; i++) {
-				var fb_url = 'http://facebook.com/' + response.data[i].id;
-				var fb_photo_url = 'https://graph.facebook.com/' + response.data[i].id + '/picture/';
-				var linked_image = "<div class='fb-photo'><a href='" + fb_url + "'/><img src='" + fb_photo_url + "'/></a><p><a href=" + fb_url + ">" + response.data[i].name + "</a></p></div>";
-				$('#fb-photo-holder').append(linked_image);
-			}
-			$('#fb-photo-holder').append("<br class='clear'/>");
-		});
-	}
-}
+	getFlickr('{{ where }}', 5);
+	fbLogin();
+	$('flickr').selectable();
+});
 </script>
 {% endblock %}
 
@@ -65,39 +31,38 @@
 
 </script>
 
-<h1 class='alpha grid_12'>Finish planning your trip to {{ where|title }}</h1>
-<div class='grid_12 omega'id='photos'>
-	<p>Select an image of {{where|title}} to use as your trip page's background:</p>
+<form action='/trips/create/' method='POST'>
+<div class='grid_24'>
+	<h1 class='alpha grid_12'>Finish planning your trip to<br/><span class='pink'>{{ where|title }}</span></h1>
+	<div class='grid_12 omega text_right'>
+		<!--<p class='grid_12'>Select an image of {{where|title}} to use as your trip page's background:</p>-->
+		<ul class='grid_12 omega' id='photos'></ul>
+	</div>
 </div>
-<form>
+
 <div>
-	<div class='alpha grid_6 suffix_2 step'>
-		<div class='grid_6 margin_top_10 margin_bottom_10'>
-			<h2>1. When is your trip?</h2>
-			<p class='weak'>Enter a month, a season, a year, etc.</p>
-			<p>{{ form.when }}</p>
-			<br class='clear'/>
-		</div>
+	<div class='alpha grid_6 suffix_2 step padding_top_10 padding_bottom_10'>
+		<h2>1. When is your trip?</h2>
+		<p class='weak'>Enter a month, a season, a year, etc.</p>
+		<p>{{ form.when }}</p>
+		<br class='clear'/>
 	</div>
-	<div class='grid_6 suffix_2 step' id='fb-friends'>
-		<div class='grid_6 margin_top_10 margin_bottom_10'>
-			<h2>2. Who's invited?</h2>
-			<div id='fb-root'></div>
-			<p class='weak grid_8 margin_left_20'>Invite some friends from Facebook to your trip!</p>
-			<div id='fb-photo-holder'></div>
-		</div>
+	<div class='grid_6 suffix_2 step padding_top_10 padding_bottom_10' id='fb-friends'>
+		<h2>2. Who's invited?</h2>
+		<div id='fb-root'></div>
+		<p class='weak grid_8 margin_left_20'>Invite some friends from Facebook to your trip!</p>
+		<div id='fb-photo-holder'></div>
 	</div>
-	<div class='grid_8 omega step'>
-		<div class='grid_8 margin_top_10 margin_bottom_10'>
-			<h2>3. Why go on this trip?</h2>
-			<p class='grid_8 weak'>Enter a description of your trip</p>
-			<textarea class='prefix_1 grid_6'></textarea>
-		</div>
+	<div class='grid_8 omega step padding_top_10 padding_bottom_10'>
+		<h2>3. Why go on this trip?</h2>
+		<p class='grid_8 weak'>Enter a description of your trip</p>
+		{{ form.why }}
 	</div>
 </div>
 <br class='clear'/>
 <div class='step padded_10 margin_right_20' style='float:right;'>
 	<input type="submit" value="Update Trip"/>
 </div>
+<input type='hidden' id='where' value='{{ where }}'/>
 </form>
 {% endblock %}
